# decibell

./: .gitignore  ARCHITECTURE.md  CMakeLists-linux.txt  CMakeLists-windows.txt  CMakeLists.txt  THIRD_PARTY_LICENSES.md  tauri-rebuild-prompt.md
.claude/: settings.local.json
.github/workflows/: electron-release.yml  release.yml
aur/: .SRCINFO  PKGBUILD  decibell.desktop
docs/superpowers/plans/: 2026-03-13-tauri-rebuild-phase1.md  2026-03-13-tauri-rebuild-phase2.md  2026-03-19-tauri-rebuild-phase3.md  2026-03-21-tauri-rebuild-phase4.md  2026-03-23-tauri-rebuild-phase5.md  2026-03-28-dxgi-desktop-duplication.md  2026-03-28-windows-screen-capture.md  2026-03-29-stream-audio-sharing.md  2026-04-02-dmabuf-zero-copy-capture.md  2026-04-10-voice-pipeline-quality-fix.md  2026-04-11-voice-scaling-fix.md  2026-04-27-codec-negotiation-a-capability-plumbing.md  2026-04-27-codec-negotiation-b-encoder-backends.md  2026-04-27-codec-negotiation-c-negotiation-and-ui.md  2026-04-28-windows-d3d11-zero-copy.md  2026-05-12-custom-profile-pictures.md  2026-05-12-windows-native-ffmpeg-encoder.md  2026-05-14-auto-rejoin-communities.md  2026-05-14-live-stream-indicators.md  2026-05-14-persistent-dms.md  2026-05-15-custom-server-pictures.md  2026-05-15-message-deletion.md  2026-05-16-electron-auto-update.md  2026-05-17-sentry-error-monitoring.md
docs/superpowers/specs/: 2026-03-13-tauri-rebuild-phase1-design.md  2026-03-13-tauri-rebuild-phase2-design.md  2026-03-19-tauri-rebuild-phase3-design.md  2026-03-21-tauri-rebuild-phase4-design.md  2026-03-23-tauri-rebuild-phase5-design.md  2026-03-28-windows-screen-capture-design.md  2026-03-29-stream-audio-sharing-design.md  2026-04-10-voice-pipeline-quality-fix-design.md  2026-04-11-voice-scaling-fix-design.md  2026-04-27-video-codec-negotiation-design.md  2026-04-28-windows-d3d11-zero-copy-design.md  2026-05-12-custom-profile-pictures-design.md  2026-05-12-windows-native-ffmpeg-encoder-design.md  2026-05-14-auto-rejoin-communities-design.md  2026-05-14-live-stream-indicators-design.md  2026-05-14-persistent-dms-design.md  2026-05-15-custom-server-pictures-design.md  2026-05-15-message-deletion-design.md  2026-05-16-electron-auto-update-design.md  2026-05-17-sentry-error-monitoring-design.md
electron-client/: .gitignore  HANDOFF.md  PACKAGING.md  electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
electron-client/electron/main/: addon.ts  attachmentRegistry.ts  dialog.ts  fileRegistry.ts  fs.ts  index.ts  ipc.ts  mediaServer.ts  netFetch.ts  protocol.ts  sentry.ts  update.ts  window.ts
electron-client/electron/preload/: index.ts
electron-client/native/: Cargo.toml  build.rs  copy-dlls.cjs  index.d.ts  index.js  package-lock.json  package.json
electron-client/native/src/: config.rs  events.rs  lib.rs  state.rs
electron-client/native/src/commands/: auth.rs  channels.rs  community.rs  dm.rs  friends.rs  messaging.rs  mod.rs  servers.rs  settings.rs  sounds.rs  streaming.rs  voice.rs
electron-client/native/src/media/: audio_device.rs  audio_stream_pipeline.rs  bitrate_preset.rs  caps.rs  capture.rs  capture_audio_pipewire.rs  capture_audio_wasapi.rs  capture_wgc.rs  codec_selection.rs  encoder.rs  encoder_probe.rs  encoder_thread.rs  gpu_pipeline.rs  jitter.rs  mod.rs  pipeline.rs  source_id.rs  thumbnail.rs  video_packet.rs  video_pipeline.rs  video_processor.rs
electron-client/native/src/net/: central.rs  community.rs  connection.rs  framing.rs  mod.rs  proto.rs  tls.rs
electron-client/resources/: icon.icns
electron-client/scripts/: build-twemoji-map.cjs  copy-twemoji.cjs
electron-client/src/: App.tsx  main.tsx
electron-client/src/components/: CrashReportingBanner.tsx  DeleteMessageConfirmModal.tsx  ImageContextMenu.tsx  LeaveServerConfirmModal.tsx  LetterAvatar.tsx  ToastStack.tsx  UserAvatar.tsx
electron-client/src/hooks/: useCentralConnectionStatus.ts  useWindowTitle.ts
electron-client/src/layouts/: AppLayout.tsx  (+3 more)
proto/: messages.proto
src/client/: App.qml  CMakeLists.txt  ChannelsSidebarForm.ui.qml  ChatViewForm.ui.qml  DecibellButton.ui.qml  DecibellTextField.ui.qml  DmDelegate.ui.qml  LoginScreen.qml  LoginScreenForm.ui.qml  Main.qml  MainScreen.qml  MainScreenForm.ui.qml  MessageDelegate.ui.qml  ProfilePopup.qml  ServerCard.ui.qml  ServerIcon.ui.qml  StreamConfigDialog.qml  UserDelegate.ui.qml  VoiceChannelViewForm.ui.qml  audio_engine.cpp  audio_engine.hpp  backend.cpp  backend.hpp  main.cpp  video_engine.cpp  video_engine.hpp
src/common/: net_utils.hpp  udp_packet.hpp
src/community/: attachment_http.cpp  attachment_http.hpp  db.cpp  db.hpp  main.cpp
src/server/: auth_manager.cpp  auth_manager.hpp  auth_utils.hpp  bcrypt.h  main.cpp  session_manager.hpp  storage.hpp
tauri-client/: generate_sounds.py  index.html  package-lock.json  package.json  vite.config.ts
tauri-client/src/: App.tsx  main.tsx
tauri-client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-client/src-tauri/capabilities/: default.json
tauri-client/src-tauri/icons/: icon.icns
tauri-client/src-tauri/src/: audio_routing.rs  config.rs  lib.rs  local_media_server.rs  logging.rs  main.rs  state.rs
tauri-client/src-tauri/src/commands/: attachments.rs  auth.rs  channels.rs  community.rs  friends.rs  messaging.rs  mod.rs  servers.rs  settings.rs  sounds.rs  streaming.rs  voice.rs
tauri-client/src-tauri/src/events/: mod.rs
tauri-client/src-tauri/src/media/: audio_device.rs  audio_stream_pipeline.rs  bitrate_preset.rs  caps.rs  capture.rs  capture_audio_pipewire.rs  capture_audio_wasapi.rs  capture_dxgi.rs  capture_pipewire.rs  capture_wgc.rs  capture_wlr_screencopy.rs  codec.rs  encoder.rs  fmp4_muxer.rs  gpu_capture.rs  gpu_interop.rs  gpu_pipeline.rs  gst_decoder_probe.rs  jitter.rs  mod.rs  nv12_store.rs  packet.rs  peer.rs  pipeline.rs  speaking.rs  thumbnail_reader.rs  video_decoder.rs  video_packet.rs  video_pipeline.rs  video_processor.rs  video_receiver.rs
tauri-client/src-tauri/src/net/: attachments.rs  central.rs  community.rs  connection.rs  mod.rs
(+223 files in other folders)
