[package]
name = "decibell"
version = "0.1.0"
description = "Decibell - Discord-like chat application"
authors = ["you"]
edition = "2021"

[lib]
name = "decibell_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
prost = "0.13"
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }
log = "0.4"
cpal = "0.15"
audiopus = "0.3.0-rc.0"
ffmpeg-next = "8"
base64 = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.9"
zbus = { version = "5", default-features = false, features = ["blocking"] }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_Storage_Xps",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Foundation",
    "Win32_Networking_WinSock",
] }
