[package]
name = "decibell"
version = "0.3.6"
description = "Decibell - decentralized text/voice chat and streaming app"
authors = ["you"]
edition = "2021"

[lib]
name = "decibell_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
prost = "0.13"
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }
log = "0.4"
cpal = "0.15"
audiopus = "0.3.0-rc.0"
rubato = "0.16"
ringbuf = "0.4"
ffmpeg-next = "8"
base64 = "0.22"
aes-gcm = "0.10"
sha2 = "0.10"
hostname = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
aec3 = "0.1"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
nnnoiseless = { version = "0.5.2", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.9"
zbus = { version = "5", default-features = false, features = ["blocking"] }
libc = "0.2"
khronos-egl = { version = "6", features = ["dynamic"] }
gl = "0.14"
libloading = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows-core = "0.61"
windows = { version = "0.61", features = [
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_Storage_Xps",
    "Win32_Devices_Display",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
] }
